--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "oauth2-server",
-  "description": "Complete, framework-agnostic, compliant and well tested module for implementing an OAuth2 Server in node.js",
+  "description":
+    "Complete, framework-agnostic, compliant and well tested module for implementing an OAuth2 Server in node.js",
   "version": "3.0.0",
-  "keywords": [
-    "oauth",
-    "oauth2"
-  ],
+  "keywords": ["oauth", "oauth2"],
   "contributors": [
     { "name": "Thom Seddon", "email": "thom@seddonmedia.co.uk" },
-    { "name": "Lars F. Karlström" , "email": "lars@lfk.io" },
+    { "name": "Lars F. Karlström", "email": "lars@lfk.io" },
     { "name": "Rui Marinho", "email": "ruipmarinho@gmail.com" },
-    { "name" : "Tiago Ribeiro", "email": "tiago.ribeiro@gmail.com" },
+    { "name": "Tiago Ribeiro", "email": "tiago.ribeiro@gmail.com" },
     { "name": "Michael Salinger", "email": "mjsalinger@gmail.com" },
     { "name": "Nuno Sousa" },
     { "name": "Max Truxa" }
@@ -19,7 +17,7 @@
   "dependencies": {
     "basic-auth": "1.1.0",
     "bluebird": "3.5.0",
-    "lodash": "4.17.4",
+    "lodash": "4.17.5",
     "promisify-any": "2.0.1",
     "statuses": "1.3.1",
     "type-is": "1.6.15"
@@ -37,7 +35,8 @@
   "scripts": {
     "pretest": "./node_modules/.bin/jshint --config ./.jshintrc lib test",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha 'test/**/*_test.js'",
-    "test-debug": "NODE_ENV=test ./node_modules/.bin/mocha  --inspect --debug-brk 'test/**/*_test.js'"
+    "test-debug":
+      "NODE_ENV=test ./node_modules/.bin/mocha  --inspect --debug-brk 'test/**/*_test.js'"
   },
   "repository": {
     "type": "git",
